<resources>
    <string name="app_name">UTSPraktik-IF6-10119229-DiazMaulidzanN</string>
    <string name="judulForm">Form Pengisian Data</string>
    <string name="info">Info</string>
    <string name="deskInfo">Form Berikut Bertujuan Untuk Memberikan Informasi Kepada Pusat agar dapat mudah dilaporkan</string>
    <string name="jenisTes">Jenis Test</string>
    <string name="tanggalTerkonfir">Tanggal Terkonfirmasi</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="tglLahir">Tanggal Lahir</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="hub">Hubungan Dengan Anda</string>
    <string name="lanjut">Selanjutnya</string>
    <string name="term">Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar</string>

    //page 2
    <string name="cekData">Cek Kembali Isian Data</string>
</resources>